// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RequestVerifyEmailModal Component renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "minHeight": 300,
        "paddingBottom": 48,
        "paddingHorizontal": 8,
      }
    }
    testID="request_verify_email_modal"
  >
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "flex": 1,
          "padding": 8,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              },
              undefined,
              Object {
                "backgroundColor": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            <View
              testID="request_verify_email_modal.button_close"
            />
          </View>
        </View>
      </View>
    </View>
    <SvgMock
      fill="none"
      height={120}
      width={135}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 20,
          },
          Object {},
          Array [
            Object {
              "marginVertical": 24,
            },
            Object {
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      This email is not verified yet!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 14,
          },
          Object {},
          Object {
            "textAlign": "center",
          },
        ]
      }
    >
      You need to click the bellow button to receive the verification link then trying to sign in later
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderRadius": 8,
          },
          Object {
            "marginTop": 24,
          },
        ]
      }
      testID="request_verify_email_modal.button"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 8,
              "flexDirection": "row",
              "justifyContent": "center",
              "paddingVertical": 4,
            },
            undefined,
            Object {
              "backgroundColor": "#7335C0",
              "height": 36,
              "paddingHorizontal": 12,
            },
          ]
        }
        testID="button.content"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#212745",
                "fontFamily": "BeVietnamPro-Medium",
                "fontSize": 15,
              },
              Object {
                "color": "#FFFFFF",
              },
              Array [
                Object {
                  "textAlign": "center",
                },
                undefined,
              ],
            ]
          }
          testID="button.text"
        >
          Send verification email
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`RequestVerifyEmailModal Component should sent verify email success correctly 1`] = `
<View>
  <View
    style={
      Object {
        "alignItems": "center",
        "minHeight": 300,
        "paddingBottom": 48,
        "paddingHorizontal": 8,
      }
    }
    testID="request_verify_email_modal"
  >
    <View
      style={
        Object {
          "alignSelf": "flex-end",
          "flex": 1,
          "padding": 8,
        }
      }
    >
      <View
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "flexDirection": "row",
              },
              undefined,
              Object {
                "backgroundColor": undefined,
              },
            ]
          }
        >
          <View
            style={
              Array [
                undefined,
                undefined,
                undefined,
              ]
            }
          >
            <View
              testID="request_verify_email_modal.button_close"
            />
          </View>
        </View>
      </View>
    </View>
    <SvgMock
      fill="none"
      height={120}
      width={135}
    />
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 20,
          },
          Object {},
          Array [
            Object {
              "marginVertical": 24,
            },
            Object {
              "textAlign": "center",
            },
          ],
        ]
      }
    >
      The verification email was sent!
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#212745",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 14,
          },
          Object {},
          Object {
            "textAlign": "center",
          },
        ]
      }
    >
      Please check your email for a verification email
    </Text>
  </View>
</View>
`;
